unpackaged/main/default/objects/Bank_Data__c/Bank_Data__c.object-meta.xml
<CustomObject>
    <label>Bank Data</label>
    <nameField>
        <displayFormat>BD-{0}</displayFormat>
        <label>Bank_Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>