unpackaged/main/default/objects/Bank_Data__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Used to store the Plaid Access Token</description>
    <inlineHelpText>Used to store the Plaid Access Token</inlineHelpText>
    <label>Access Token</label>
    <length>250</length>
    <type>Text</type>
</CustomField>