unpackaged/main/default/objects/Bank_Data__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Used to store the Plaid Account Id</description>
    <inlineHelpText>Used to store the Plaid Account Id</inlineHelpText>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>