unpackaged/main/default/objects/Bank_Data__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Field to initially capture and compare bank account number data to ensure we are not pulling duplicate bank accounts.</description>
    <inlineHelpText>Field to initially capture and compare bank account number data to ensure we are not pulling duplicate bank accounts.</inlineHelpText>
    <label>Account Number</label>
    <length>175</length>
    <type>Text</type>
</CustomField>