unpackaged/main/default/objects/Bank_Data__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>This field will collect the Name of the bank that the rep has collected.</description>
    <inlineHelpText>Enter the name of the customer's bank account.</inlineHelpText>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>