unpackaged/main/default/objects/Bank_Data__c/fields/Banklink_Status__c.field-meta.xml
<CustomField>
    <fullName>Banklink_Status__c</fullName>
    <label>Banklink Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Up to Date</fullName>
            </value>
            <value>
                <fullName>Refresh Retrying</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>