unpackaged/main/default/objects/Bank_Data__c/fields/BD_Process__c.field-meta.xml
<CustomField>
    <fullName>BD_Process__c</fullName>
    <label>BD Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Loan</fullName>
            </value>
            <value>
                <fullName>Loan Modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>