unpackaged/main/default/objects/Bank_Data__c/fields/Date_Time_Data_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Data_Received__c</fullName>
    <label>Date/Time Data Received</label>
    <type>DateTime</type>
</CustomField>