unpackaged/main/default/objects/Bank_Data__c/fields/Encrypted_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Account_ID__c</fullName>
    <label>Encrypted Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>