unpackaged/main/default/objects/Bank_Data__c/fields/Encrypted_Email_String__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Email_String__c</fullName>
    <label>Encrypted Email String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>