unpackaged/main/default/objects/Bank_Data__c/fields/Estimated_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue__c</fullName>
    <description>Calculated estimated annual revenue or annual gross sales</description>
    <inlineHelpText>Calculated estimated annual revenue or annual gross sales</inlineHelpText>
    <label>Estimated Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>