unpackaged/main/default/objects/Bank_Data__c/fields/File_Location__c.field-meta.xml
<CustomField>
    <fullName>File_Location__c</fullName>
    <description>The file path or location</description>
    <externalId>true</externalId>
    <inlineHelpText>The file path or location</inlineHelpText>
    <label>File Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>