unpackaged/main/default/objects/Bank_Data__c/fields/Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_ID__c</fullName>
    <description>Used to store the Plaid Item_ID</description>
    <inlineHelpText>Used to store the Plaid Item_ID</inlineHelpText>
    <label>Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>