unpackaged/main/default/objects/Bank_Data__c/fields/Link_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Link_Session_Id__c</fullName>
    <description>Used to store the Plaid Link Session Id</description>
    <inlineHelpText>Used to store the Plaid Link Session Id</inlineHelpText>
    <label>Link Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>