unpackaged/main/default/objects/Bank_Data__c/fields/Password_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Password_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field if checked will indicate that the password used in the Yodlee MFA has been changed and a new link should be sent to the customer if bank data is needed.</description>
    <inlineHelpText>This field will be checked True if an active Yodlee customer has changed their password.  When an updated link has been sent to the customer to reactivate their account, this field will be updated.</inlineHelpText>
    <label>Password Invalid</label>
    <type>Checkbox</type>
</CustomField>