unpackaged/main/default/objects/Bank_Data__c/fields/Related_to_Credit_Review__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Credit_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related to Credit Review</label>
    <type>Checkbox</type>
</CustomField>