unpackaged/main/default/objects/Bank_Data__c/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <label>Report Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>