unpackaged/main/default/objects/Bank_Data__c/fields/Request_Bank__c.field-meta.xml
<CustomField>
    <fullName>Request_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used in the Bank Data VF request page to indicate a Yodlee request should be generated and sent to the customer.</description>
    <inlineHelpText>This field will be used in the Bank Data VF request page to indicate a Yodlee request should be generated and sent to the customer.</inlineHelpText>
    <label>Request Bank</label>
    <type>Checkbox</type>
</CustomField>