unpackaged/main/default/objects/Bank_Data__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <description>This field will indicate the status of the bank data request.</description>
    <inlineHelpText>This field will indicate the status of the bank data request.</inlineHelpText>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Collection</fullName>
                <default>true</default>
                <label>Data Collection</label>
            </value>
            <value>
                <fullName>Invite Sent</fullName>
            </value>
            <value>
                <fullName>Email Link Clicked</fullName>
            </value>
            <value>
                <fullName>Email Link Expired</fullName>
            </value>
            <value>
                <fullName>Invalid Email Link</fullName>
            </value>
            <value>
                <fullName>Login Success</fullName>
            </value>
            <value>
                <fullName>Login Failed</fullName>
            </value>
            <value>
                <fullName>Linking Started</fullName>
            </value>
            <value>
                <fullName>Linking Complete</fullName>
            </value>
            <value>
                <fullName>Bank Data and PDF Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Retrying</fullName>
            </value>
            <value>
                <fullName>No Account Match</fullName>
            </value>
            <value>
                <fullName>Multiple Accounts Match</fullName>
            </value>
            <value>
                <fullName>Customer Exit</fullName>
                <isActive>false</isActive>
                <label>Customer Exit</label>
            </value>
            <value>
                <fullName>Deactivated by NF</fullName>
                <isActive>false</isActive>
                <label>Deactivated by NF</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <isActive>false</isActive>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>Manual Entry</fullName>
                <isActive>false</isActive>
                <label>Manual Entry</label>
            </value>
            <value>
                <fullName>Refresh Requested</fullName>
                <isActive>false</isActive>
                <label>Refresh Requested</label>
            </value>
            <value>
                <fullName>Sent</fullName>
                <isActive>false</isActive>
                <label>Sent</label>
            </value>
            <value>
                <fullName>Suspended - Password</fullName>
                <isActive>false</isActive>
                <label>Suspended - Password</label>
            </value>
            <value>
                <fullName>Verification Started</fullName>
                <isActive>false</isActive>
                <label>Verification Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>