unpackaged/main/default/objects/Bank_Data__c/fields/Yodlee_Account__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Account__c</fullName>
    <label>Yodlee: Account #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>