unpackaged/main/default/objects/Bank_Data__c/fields/Yodlee_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Bank_Name__c</fullName>
    <label>Yodlee: Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>