unpackaged/main/default/objects/Bank_Data__c/fields/Yodlee_Banks__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Banks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yodlee Banks</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>FPC - WC - Renewal Sales, NF Renewal Manager Profile</value>
        </filterItems>
        <filterItems>
            <field>Yodlee_Banks__c.Transaction_Depth__c</field>
            <operation>greaterOrEqual</operation>
            <value>90</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notEqual</operation>
            <value>FPC - WC - Renewal Sales, NF Renewal Manager Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Yodlee_Banks__c</referenceTo>
    <relationshipLabel>Bank Data</relationshipLabel>
    <relationshipName>Bank_Data</relationshipName>
    <type>Lookup</type>
</CustomField>