unpackaged/main/default/objects/Bank_Data__c/fields/Yodlee_Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Case_Notes__c</fullName>
    <label>Yodlee Case Notes</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>