unpackaged/main/default/objects/Bank_Data__c/fields/Yodlee_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Case_Number__c</fullName>
    <label>Yodlee Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>