unpackaged/main/default/objects/Bank_Data__c/fields/Yodlee_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Error_Message__c</fullName>
    <label>Yodlee Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>