unpackaged/main/default/objects/Bank_Data__c/fields/Yodlee_MemSite_Id__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_MemSite_Id__c</fullName>
    <label>Yodlee MemSite Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>