unpackaged/main/default/objects/Bank_Data__c/fields/Yodlee_Username__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Username__c</fullName>
    <label>Yodlee Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>