unpackaged/main/default/objects/Bank_Data__c/validationRules/Bank_Data_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Data_cannot_be_edited</fullName>
    <active>false</active>
    <description>Prohibits Bank Data records from being edited if they were created through a Credit Review (exception for editing the Yodlee Banks field), or if Yodlee has already been Completed.</description>
    <errorConditionFormula>OR( 
AND(
Related_to_Credit_Review__c=TRUE, 
OR(
ISCHANGED(Account_Number__c),
ISCHANGED(Routing_Number__c),
ISCHANGED(Bank_Name__c),
ISCHANGED(Account__c),
AND(
ISCHANGED(Yodlee_Banks__c),
NOT(ISBLANK(PRIORVALUE(Yodlee_Banks__c)))
)
)
),
AND(
ISPICKVAL(Verification_Status__c,"Completed"),
OR(
ISCHANGED(Account_Number__c),
ISCHANGED(Routing_Number__c),
ISCHANGED(Bank_Name__c),
ISCHANGED(Account__c),
AND(
ISCHANGED(Yodlee_Banks__c),
NOT(ISBLANK(PRIORVALUE(Yodlee_Banks__c)))
)
)
)
)</errorConditionFormula>
    <errorMessage>Bank Data records cannot be edited. Please create a new Bank Data record for this Bank Account.</errorMessage>
</ValidationRule>